--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	<p><a href="pages.html">This is page 1</a></p>
 	<p><a href="pages2.html">This is page 2</a></p>
 
+	<br>
+
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/H1VxTwP0FgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+	<br>
+	<br>
+
+	<iframe src="https://giphy.com/embed/KbOpwqSuMLQ7S" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/laugh-jordan-hearty-KbOpwqSuMLQ7S">via GIPHY</a></p>
 
 </head>
 <body>
