--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 
 	<br>
 
-	<table style="border:8px #FFD382 groove;" cellpadding="10" border='0'>
+	<table style="border:20px #FFD382 groove;" cellpadding="50" border='0'>
 	<tr>
-		<td></td>
-		<td></td>
+		<td>test1</td>
+		<td>test2</td>
 	</tr>
 
 	<tr>
-		<td></td>
-		<td></td>
+		<td>test3</td>
+		<td>test4</td>
 	</tr>
 
 	<tr>
-		<td></td>
-		<td></td>
+		<td>test5</td>
+		<td>test6</td>
 	</tr>
 	</table>
 	
