--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 	<br>
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/VYv3yMqmXhQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/fvukiaWx0ew" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<br>
 	<br>
 
-	<iframe src="https://giphy.com/embed/KbOpwqSuMLQ7S" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/laugh-jordan-hearty-KbOpwqSuMLQ7S">via GIPHY</a></p>
+	<iframe src="https://giphy.com/embed/BmmfETghGOPrW" width="480" height="206" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/reaction-BmmfETghGOPrW"></a></p>
 
 	<br>
 
-	<table style="border:20px #FFD382 groove;" cellpadding="50" border='0'>
+	<table style="border:20px #FF0000 groove;" cellpadding="50" border='0'>
 	<tr>
 		<td>test1</td>
 		<td>test2</td>
