--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
 
 	<table style="border:20px #FF0000 groove;" cellpadding="50" border='0'>
 	<tr>
-		<td>test1</td>
-		<td>test2</td>
+		<td><img src="sea.jpg" width="200" height="200"></td>
+		<td><img src="motor.jpg"  width="200" height="200"></td>
 	</tr>
 
 	<tr>
-		<td>test3</td>
-		<td>test4</td>
+		<td><iframe width="200" height="200" src="https://www.youtube.com/embed/8eAifOjlfeI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+		<td><img src="leaf.jpg" width="200" height="200"></td>
 	</tr>
 
-	<tr>
-		<td>test5</td>
-		<td>test6</td>
-	</tr>
 	</table>
 	
 </head>
