--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
 	</table>
 	
+	
+	<a href="pages.html"><input type="button" value="我是按鈕1" style="width:120px;height:40px;font-size:20px;"></a><br><br>
+	<a href="pages2.html"><input type="button" value="我是按鈕2" style="width:120px;height:40px;font-size:20px;"></a><br><br>
+	<a href="test3.html"><input type="button" value="我是按鈕3" style="width:120px;height:40px;font-size:20px;"></a><br>	
+	
 </head>
 <body>
 	
