--- a/website/maps.html
+++ b/website/maps.html
@@ -87,15 +87,17 @@ body {
 
 <br>
 <h1>Our location</h1>
-<p style="text-align:center;">12 Russell Ave, New Rochelle, NY 10801, USA</p>	
+<p style="text-align:center;">De Pizza,35A Boat Quay, Singapore 049824</p>	
 <br>
 
 
 <div class="bg-image"></div>
 
 <div class="bg-text">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d767641.0109140032!2d-73.53280094507159!3d41.2740945525841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf8e0213d2e51e546!2sPizzeria%20La%20Rosa!5e0!3m2!1szh-TW!2stw!4v1593425822494!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.1802440338793!2d103.85085789072511!3d1.284953924171587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5cc1e3556f910dd5!2sDePizza!5e0!3m2!1szh-TW!2stw!4v1593436560691!5m2!1szh-TW!2stw" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
+
+
 
 </body>
 </html>
