--- a/website/index.html
+++ b/website/index.html
@@ -425,7 +425,7 @@
 
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/21.JPG" alt="" width="450" height="450" /></a>
+								<a href="#"><img src="images/21.jpg" alt="" width="450" height="450" /></a>
 								<h>2019</h>
 							</div>
 						</div>
